--- a/plugins/tekton-pipelines-backend/package.json
+++ b/plugins/tekton-pipelines-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jquad-group/plugin-tekton-pipelines-backend",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
@@ -27,15 +27,15 @@
     "@types/express": "*",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
-    "winston": "^3.2.1",
     "node-fetch": "^2.6.7",
+    "winston": "^3.2.1",
     "yn": "^4.0.0"
   },
   "devDependencies": {
     "@backstage/cli": "^0.18.0-next.2",
     "@types/supertest": "^2.0.8",
-    "supertest": "^4.0.2",
-    "msw": "^0.43.0"
+    "msw": "^0.43.0",
+    "supertest": "^4.0.2"
   },
   "files": [
     "dist"
