--- a/plugins/tekton-pipelines-backend/package.json
+++ b/plugins/tekton-pipelines-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jquad-group/plugin-tekton-pipelines-backend",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
@@ -22,7 +22,7 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/backend-common": "^0.14.1-next.2",
+    "@backstage/backend-common": "^0.15.1",
     "@backstage/config": "^1.0.1",
     "@types/express": "*",
     "express": "^4.17.1",
@@ -32,7 +32,7 @@
     "yn": "^4.0.0"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.18.0-next.2",
+    "@backstage/cli": "^0.19.0",
     "@types/supertest": "^2.0.8",
     "msw": "^0.43.0",
     "supertest": "^4.0.2"
