multiple kubernetes clusters can be configured

--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -43,3 +43,12 @@ catalog:
   baseUrl: https://example.domain.com
   authorizationBearerToken: 'xxx'
   dashboardBaseUrl: https://example.domain.com
+
+tekton:
+  - baseUrl: https://example1.domain.com
+    authorizationBearerToken: 'xxx'
+    dashboardBaseUrl: https://example1.domain.com
+#  multiple kubernetes clusters
+#  - baseUrl: https://example2.domain.com
+#    authorizationBearerToken: 'yyy'
+#    dashboardBaseUrl: https://example2.domain.com
