--- a/plugins/tekton-pipelines-common/package.json
+++ b/plugins/tekton-pipelines-common/package.json
@@ -22,7 +22,7 @@
     "postpack": "backstage-cli package postpack"
   },
   "devDependencies": {
-    "@backstage/cli": "workspace:^"
+    "@backstage/cli": "^0.20.0"
   },
   "files": [
     "dist"
