--- a/plugins/tekton-pipelines-common/package.json
+++ b/plugins/tekton-pipelines-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jquad-group/plugin-tekton-pipelines-common",
-  "version": "2.0.0-debug",
+  "version": "2.0.1",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
