--- a/plugins/tekton-pipelines-backend/package.json
+++ b/plugins/tekton-pipelines-backend/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@backstage/backend-common": "^0.15.2",
     "@backstage/config": "^1.0.3",
+    "@jquad-group/plugin-tekton-pipelines-common": "^2.0.0-debug",
     "@types/express": "*",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
