--- a/plugins/tekton-pipelines-backend/package.json
+++ b/plugins/tekton-pipelines-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jquad-group/plugin-tekton-pipelines-backend",
-  "version": "0.2.0-debug",
+  "version": "0.2.1",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
