--- a/package.json
+++ b/package.json
@@ -38,13 +38,6 @@
     "typescript": "~4.6.4"
   },
   "resolutions": {
-    "got": "^11.8.5",
-    "jose": "^4.9.2",
-    "parse-path": "^5.0.0",
-    "terser": "^5.14.2",
-    "file-type": "^16.5.4",
-    "ionicabizau/parse-url": "^8.1.0",
-    "passport-saml": "^3.2.2",
     "@types/react": "^17",
     "@types/react-dom": "^17"
   },
@@ -57,5 +50,6 @@
     "*.{json,md}": [
       "prettier --write"
     ]
-  }
+  },
+  "packageManager": "yarn@3.2.3"
 }
