--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -21,6 +21,7 @@
     "@backstage/plugin-catalog-import": "^0.9.9",
     "@backstage/plugin-catalog-react": "^1.7.0",
     "@backstage/plugin-github-actions": "^0.6.0",
+    "@backstage/plugin-kubernetes": "^0.9.2",
     "@backstage/plugin-org": "^0.6.9",
     "@backstage/plugin-permission-react": "^0.4.13",
     "@backstage/plugin-scaffolder": "^1.14.0",
@@ -34,6 +35,8 @@
     "@backstage/theme": "^0.4.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "backstage-plugin-my-tekton-plugin": "^0.1.0",
+    "backstage-plugin-my-tekton-test-plugin": "^0.1.0",
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
