--- a/plugins/tekton-pipelines/package.json
+++ b/plugins/tekton-pipelines/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@jquad-group/plugin-tekton-pipelines",
-  "version": "0.3.2",
+  "name": "backstage-plugin-tekton-pipelines-plugin",
+  "version": "0.1.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
+  "private": true,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.esm.js",
@@ -22,21 +23,16 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/catalog-model": "^1.4.0",
     "@backstage/core-components": "^0.13.2",
     "@backstage/core-plugin-api": "^1.5.2",
-    "@backstage/plugin-catalog-react": "^1.7.0",
     "@backstage/theme": "^0.4.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@types/react": "^16.13.1 || ^17.0.0",
-    "loglevel": "^1.8.1",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
-    "react": "^16.13.1 || ^17.0.0",
-    "react-router-dom": "6.0.0-beta.0 || ^6.3.0"
+    "react": "^16.13.1 || ^17.0.0"
   },
   "devDependencies": {
     "@backstage/cli": "^0.22.8",
@@ -46,10 +42,8 @@
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^14.0.0",
-    "@types/jest": "*",
     "@types/node": "*",
-    "cross-fetch": "^3.1.5",
-    "msw": "^0.43.0"
+    "msw": "^1.0.0"
   },
   "files": [
     "dist"
