--- a/plugins/tekton-pipelines/package.json
+++ b/plugins/tekton-pipelines/package.json
@@ -23,8 +23,11 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
+    "@backstage/catalog-model": "^1.4.1",
     "@backstage/core-components": "^0.13.2",
     "@backstage/core-plugin-api": "^1.5.2",
+    "@backstage/plugin-catalog-react": "^1.8.0",
+    "@backstage/plugin-kubernetes": "^0.9.3",
     "@backstage/theme": "^0.4.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
@@ -32,7 +35,8 @@
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
-    "react": "^16.13.1 || ^17.0.0"
+    "react": "^16.13.1 || ^17.0.0",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@backstage/cli": "^0.22.8",
