--- a/plugins/tekton-pipelines/package.json
+++ b/plugins/tekton-pipelines/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backstage-plugin-tekton-pipelines-plugin",
-  "version": "0.1.0",
+  "version": "1.0.0-beta.1",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
-  "private": true,
+  "private": false,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.esm.js",
