--- a/plugins/tekton-pipelines/package.json
+++ b/plugins/tekton-pipelines/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "backstage-plugin-tekton-pipelines-plugin",
-  "version": "1.0.0-beta.1",
+  "name": "@jquad-group/backstage-plugin-tekton-pipelines-plugin",
+  "version": "1.0.0-beta.2",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
