--- a/plugins/tekton-pipelines/package.json
+++ b/plugins/tekton-pipelines/package.json
@@ -42,6 +42,7 @@
     "@backstage/cli": "^0.22.8",
     "@backstage/core-app-api": "^1.8.1",
     "@backstage/dev-utils": "^1.0.16",
+    "@backstage/plugin-kubernetes-common": "^0.6.5",
     "@backstage/test-utils": "^1.4.0",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^12.1.3",
