--- a/plugins/tekton-pipelines/package.json
+++ b/plugins/tekton-pipelines/package.json
@@ -13,6 +13,7 @@
   "backstage": {
     "role": "frontend-plugin"
   },
+  "sideEffects": false,
   "scripts": {
     "start": "backstage-cli package start",
     "build": "backstage-cli package build",
@@ -23,31 +24,30 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/catalog-model": "^1.4.1",
-    "@backstage/core-components": "^0.13.2",
-    "@backstage/core-plugin-api": "^1.5.2",
-    "@backstage/plugin-catalog-react": "^1.8.0",
-    "@backstage/plugin-kubernetes": "^0.9.3",
-    "@backstage/theme": "^0.4.0",
+    "@backstage/catalog-model": "^1.4.3",
+    "@backstage/core-components": "^0.13.10",
+    "@backstage/core-plugin-api": "^1.8.2",
+    "@backstage/plugin-catalog-react": "^1.9.3",
+    "@backstage/plugin-kubernetes": "^0.11.4",
+    "@backstage/theme": "^0.5.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "react-digraph": "^9.1.1",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
-    "react": "^16.13.1 || ^17.0.0",
-    "react-router-dom": "^6.14.2"
+    "react": "^16.13.1 || ^17.0.0"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.22.8",
-    "@backstage/core-app-api": "^1.8.1",
-    "@backstage/dev-utils": "^1.0.16",
-    "@backstage/plugin-kubernetes-common": "^0.6.5",
-    "@backstage/test-utils": "^1.4.0",
+    "@backstage/cli": "^0.25.1",
+    "@backstage/core-app-api": "^1.11.3",
+    "@backstage/dev-utils": "^1.0.26",
+    "@backstage/plugin-kubernetes-common": "^0.7.3",
+    "@backstage/test-utils": "^1.4.7",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^14.0.0",
-    "@types/node": "*",
     "msw": "^1.0.0"
   },
   "files": [
