--- a/plugins/tekton-pipelines/package.json
+++ b/plugins/tekton-pipelines/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jquad-group/backstage-plugin-tekton-pipelines-plugin",
-  "version": "1.0.1",
+  "version": "1.1.0-beta.1",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
